# model/dataset.go
@@ -225,13 +225,12 @@ type Dataset struct {
 	PieceSize            int64       `json:"pieceSize"`
 	OutputDirs           StringSlice `gorm:"type:JSON"                    json:"outputDirs"`
 	EncryptionRecipients StringSlice `gorm:"type:JSON"                    json:"encryptionRecipients"`
-	EncryptionScript     string      `json:"encryptionScript"`
 	Metadata             Metadata    `gorm:"type:JSON"                    json:"metadata"`
 	Wallets              []Wallet    `gorm:"many2many:wallet_assignments" json:"wallets,omitempty"    swaggerignore:"true"`
 }
 
 func (d Dataset) UseEncryption() bool {
-	return len(d.EncryptionRecipients) > 0 || d.EncryptionScript != ""
+	return len(d.EncryptionRecipients) > 0
 }
 
 // Source represents a source of data, i.e. a local file system directory.
